confluent/broker.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confluent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  namespace: confluent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
      - name: broker
        image: confluentinc/cp-kafka:7.9.1
        ports:
          - containerPort: 9092
          - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: confluent
spec:
  selector:
    app: broker
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
    nodePort: 30092
  type: NodePort
