confluent/control-center.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confluent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-center
  namespace: confluent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control-center
  template:
    metadata:
      labels:
        app: control-center
    spec:
      containers:
      - name: control-center
        image: confluentinc/cp-enterprise-control-center:7.9.1
        ports:
        - containerPort: 9021
---
apiVersion: v1
kind: Service
metadata:
  name: control-center
  namespace: confluent
spec:
  selector:
    app: control-center
  ports:
  - protocol: TCP
    port: 9021
    targetPort: 9021
    nodePort: 30021
  type: NodePort
