confluent/schema-registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confluent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: confluent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - name: schema-registry
        image: confluentinc/cp-schema-registry:7.9.1
        ports:
        - containerPort: 8081
        command: ["sleep"]
        args: ["3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: confluent
spec:
  selector:
    app: schema-registry
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30081
  type: NodePort
