confluent/zookeper.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confluent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: confluent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.9.1
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: confluent
spec:
  selector:
    app: zookeeper
  ports:
  - protocol: TCP
    port: 2181
    targetPort: 2181
    nodePort: 30181
  type: NodePort
